# nfl-qb-intelligence

./: .gitignore  README.md  build_features.py  clustering.py  completion_model.py  diagnose_rankings.py  fix_mobility.py  load_data.py  pyproject.toml  requirements.txt  setup_dashboard.sh
app/: dashboard.py
dashboard/: package-lock.json
dashboard/src/: AnalyticsLab.jsx  App.jsx
dashboard/src/data/: qb_data.json
data/processed/: pass_plays_all.parquet  pass_plays_qualified.parquet  pass_plays_qualified_2024.parquet  pass_plays_qualified_2025.parquet  qb_features.parquet  qb_mobility.parquet  qb_rush_plays_qualified.parquet
data/raw/: rosters_2025.parquet
notebooks/: 01_data_exploration.ipynb  01b_fix_mobility_chart.ipynb  02_data_analysis.ipynb
src/data/: export_dashboard_data.py  load_data.py
src/features/: build_features.py
src/nfl_qb_intelligence.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/visualization/: plots.py
