[project]
name = "nfl-qb-intelligence"
version = "0.1.0"
description = "NFL QB play style clustering and completion probability modeling"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
